--- a/echoesfromthevoid/index.html
+++ b/echoesfromthevoid/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Echos from the Void - Chapter 1</title>
+  <title>Echoes from the Void - Chapter 1</title>
   <meta content="" name="131 Gaming Club 2022-2023 Crusade">
   <meta content="" name="Warhammer 40k,Springfield MA, Hadley MA, Northampton MA, Greenfield MA, Charlemont MA">
 
@@ -55,9 +55,9 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center" style="background-image: url('../assets/img/echosfromthevoid/solarsystem.png'); background-size: cover;">
+  <section id="hero" class="d-flex flex-column justify-content-center" style="background-image: url('../assets/img/echoesfromthevoid/solarsystem.png'); background-size: cover;">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Echos from the Void</h1>
+      <h1>Echoes from the Void</h1>
       <p><span class="typed" data-typed-items="Coming Soon"></span></p>
       <p>
         Echoes from the Void is a Warhammer 40k Crusade League campaign by <a href="www.boltersatdawn.com" target="_blank">Bolters at Dawn</a>  used with permission. The crusade takes place over five chapters of faction vs. faction warfare. The forces of the Imperium clash with the traitors of Chaos along side the cunning Xenos factions as they battle for faction-wide bonuses and accomplishing chapter-specific objectives. The story takes place in the system of Huthar; a derelict, long-lost system near Vordrast in the Segmentum Solar sector.
@@ -107,7 +107,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-chapter1">
             <div class="portfolio-wrap">
-              <img src="../assets/img/echosfromthevoid/chapter1.png" class="img-fluid" alt="">
+              <img src="../assets/img/echoesfromthevoid/chapter1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h3>Chapter 1</h3>
                 <h4>Selleon</h4>
@@ -117,9 +117,9 @@
                 </p>
                 <div class="portfolio-links">
                   <!--
-                  <a href="../assets/img/echosfromthevoid/chapter1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 1"><i class="bx bx-plus"></i></a> 
+                  <a href="../assets/img/echoesfromthevoid/chapter1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 1"><i class="bx bx-plus"></i></a> 
                   -->
-                  <a href="./chapter1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 1 Details"><i class="bx bx-link"></i></a>
+                  <a href="./chapter1.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 1"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -127,15 +127,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-chapter2">
             <div class="portfolio-wrap">
-              <img src="../assets/img/echosfromthevoid/chapter2.png" class="img-fluid" alt="">
+              <img src="../assets/img/echoesfromthevoid/chapter2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Chapter 2</h4>
                 <p>Thuna 6MK</p>
                 <div class="portfolio-links">
                   <!--
-                  <a href="../assets/img/echosfromthevoid/chapter2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 2"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/echoesfromthevoid/chapter2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 2"><i class="bx bx-plus"></i></a>
                   -->
-                  <a href="./chapter2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="./chapter2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 2"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -143,15 +143,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-chapter3">
             <div class="portfolio-wrap">
-              <img src="../assets/img/echosfromthevoid/chapter3.png" class="img-fluid" alt="">
+              <img src="../assets/img/echoesfromthevoid/chapter3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Chapter 3</h4>
                 <p>Gnurn</p>
                 <div class="portfolio-links">
                   <!--
-                  <a href="../assets/img/echosfromthevoid/chapter3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 3"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/echoesfromthevoid/chapter3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 3"><i class="bx bx-plus"></i></a>
                   -->
-                  <a href="./chapter3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="./chapter3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 3"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -159,15 +159,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-chapter4">
             <div class="portfolio-wrap">
-              <img src="../assets/img/echosfromthevoid/chapter4.png" class="img-fluid" alt="">
+              <img src="../assets/img/echoesfromthevoid/chapter4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Chapter 4</h4>
                 <p>Marthammor X8</p>
                 <div class="portfolio-links">
                   <!--
-                  <a href="../assets/img/echosfromthevoid/chapter4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 4"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/echoesfromthevoid/chapter4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 4"><i class="bx bx-plus"></i></a>
                   -->
-                  <a href="./chapter4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="./chapter4.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 4"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -175,15 +175,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-chapter5">
             <div class="portfolio-wrap">
-              <img src="../assets/img/echosfromthevoid/chapter5.png" class="img-fluid" alt="">
+              <img src="../assets/img/echoesfromthevoid/chapter5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Chapter 5</h4>
                 <p>Marthammor</p>
                 <div class="portfolio-links">
                   <!--
-                  <a href="../assets/img/echosfromthevoid/chapter5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 5"><i class="bx bx-plus"></i></a>
+                  <a href="../assets/img/echoesfromthevoid/chapter5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 5"><i class="bx bx-plus"></i></a>
                   -->
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="./chapter5.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 5"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
