--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="./index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="./index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="./echoesfromthevoid/index.html" class="nav-link scrollto"><i class="bi bi-menu-up"></i> <span>Crusade Home</span></a></li>        
         <li><a href="./index.html#about" class="nav-link scrollto"><i class="bx bx-question-mark"></i> <span>About</span></a></li>
         <li><a href="./index.html#facts" class="nav-link scrollto"><i class="bx bxs-trophy"></i> <span>Crusade Score</span></a></li>
-        <li><a href="./index.html#portfolio" class="nav-link scrollto"><i class="bx bx-camera"></i> <span>Crusade Photos</span></a></li>         
-        <li><a href="./playerpacket.html" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Player Packet</span></a></li>
         <li><a href="./index.html#codeofconduct" class="nav-link scrollto"><i class="bx bx-book-heart"></i> <span>Code of Conduct</span></a></li>
         
       </ul>
@@ -72,7 +71,7 @@
       </div>
 -->
       <h2 class="hero" style="margin-top:3cm;">
-        We're running a 40k Crusade in Hadley and Greenfield Massachusetts<br/><a href="./echosfromthevoid/index.html">Click here to join</a> <a href="./echosfromthevoid/index.html"><i class="bi bi-menu-up"></a></i>
+        We're running a 40k Crusade in Hadley and Greenfield Massachusetts<br/><a href="./echoesfromthevoid/index.html">Click here to join</a> <a href="./echoesfromthevoid/index.html"><i class="bi bi-menu-up"></a></i>
       </h2>
     </div>
   </section><!-- End Hero -->
