--- a/echoesfromthevoid/index.html
+++ b/echoesfromthevoid/index.html
@@ -202,20 +202,20 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-chapter1 col-lg-4 col-md-6 portfolio-item filter-chapter2 col-lg-4 col-md-6 portfolio-item filter-chapter3 col-lg-4 col-md-6 portfolio-item filter-chapter4 col-lg-4 col-md-6 portfolio-item filter-chapter5" >
+          <div class="col-lg-4 col-md-6 portfolio-item filter-chapter1" >
             <div class="portfolio-wrap">
               <img src="../assets/img/echoesfromthevoid/specops.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3>Special Operations</h3>
-                <h4>Huthar Asteroid Belt</h4>
-                <strong>Dates: </strong>Entire Crusade<br/>                
+                <h3>Chapter 1 - Special Operations</h3>
+                <h4>Selleon Asteroid Belt</h4>
+                <strong>Dates: </strong>Sept 15 to Oct 31<br/>                
                 <p><strong>Points: </strong>Kill Team<br/>
-                <strong>Number of Games: </strong>1 per chapter<br/>                     
+                <strong>Number of Games: </strong>1<br/>                     
                 <div class="portfolio-links">
                   <!--
                   <a href="../assets/img/echoesfromthevoid/chapter5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 5"><i class="bx bx-plus"></i></a>
                   -->
-                  <a href="./specops.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 5"><i class="bx bx-link"></i></a>
+                  <a href="./chapter1.specops.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 1 - SpecOps"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
