--- a/echoesfromthevoid/playerpacket.html
+++ b/echoesfromthevoid/playerpacket.html
@@ -164,6 +164,11 @@
             </div>
 
             <div class="resume-item">
+              <h4>Universal Rules/Points/Balance Sheets</h4>
+              <p>All universal rules, points updates and FAQs from Matched Play apply to this crusade unless explicitly declared here.</p>
+            </div>
+
+            <div class="resume-item">
               <h4>Code of Conduct</h4>
               <p>Each player is expected to adhere to the <a href="https://www.131.games/index.html#codeofconduct">code of conduct</a></p>
             </div>
@@ -208,7 +213,7 @@
             <div class="resume-item">
               <h4>Kill Teams & Special Operations</h4>
               <p>Players who have completed all of their chapter prescribed games are able to challenge any player in the league who has also completed their chapter prescribed games to a Special Operations match with a Kill Team using Kill Team 2021 rules. This includes their own faction. A players kill team must be of the same faction as their crusade army. Players are only able to participate in a single special operation per chapter. Winners of a special operations mission gain a bonus for their crusade army
- 			  </p>
+ 			        </p>
             </div>
 
             <div class="resume-item">
@@ -222,6 +227,19 @@
                 <li>A Crusade Leader may request a player stop fielding their legend model, and replace it, if it's clear during play its over powered. If this happens all experience can be transferred to the new model without penalty</li>
               </ul>               
             </div>
+
+            <div class="resume-item">
+              <h4>Relics/Artifacts/Warlord Traits</h4>
+              <p>Use the narrative play rules for relics, artifacts, warlord traits.</p>
+              <p>Refer to <a href="https://tinyurl.com/4den9csh" target="_blank">narrative play rules for additional details</a></p>  
+            </div>
+
+            <div class="resume-item">
+              <h4>Battle Forged Armies</h4>
+              <p>Players armies must be battle-forged to the standard defined by Warzone Nephilim.</p>
+              <p>Refer to <a href="https://tinyurl.com/45j4fznr" target="_blank">Warzone Nephilim for additional details</a></p>  
+            </div>
+
 
             <div class="resume-item">
               <h4>Ending a Chapter</h4>
