typo fix in title

--- a/echoesfromthevoid/index.html
+++ b/echoesfromthevoid/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Echoes from the Void - Chapter 1</title>
+  <title>Echoes from the Void</title>
   <meta content="" name="131 Gaming Club 2022-2023 Crusade">
   <meta content="" name="Warhammer 40k,Springfield MA, Hadley MA, Northampton MA, Greenfield MA, Charlemont MA">
 
