--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         </div>
       </div>
     </section><!-- End About Section -->
-
-    <!-- ======= Facts Section ======= -->
+<!-- 
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
@@ -158,7 +157,6 @@
         </div>
 
         <div class="row">
-<!-- https://fontawesomeicons.com/bootstrap/icons -->
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
@@ -194,7 +192,8 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>
+  -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
