--- a/echoesfromthevoid/index.html
+++ b/echoesfromthevoid/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center" style="background-image: url('../assets/img/echoesfromthevoid/solarsystem.png'); background-size: cover;">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Echoes from the Void</h1>
-      <p><span class="typed" data-typed-items="Teams Forming Now. Click on the player packet for registration details"></span></p>
+      <p><span class="typed" data-typed-items="Chapter 1 is LIVE"></span></p>
       <p>
         Echoes from the Void is a Warhammer 40k Crusade League campaign by <a href="https://www.boltersatdawn.com" target="_blank">Bolters at Dawn</a>  used with permission. The crusade takes place over five chapters of faction vs. faction warfare. The forces of the Imperium clash with the traitors of Chaos along side the cunning Xenos factions as they battle for faction-wide bonuses and accomplishing chapter-specific objectives. The story takes place in the system of Huthar; a derelict, long-lost system near Vordrast in the Segmentum Solar sector.
       </p>
