--- a/echoesfromthevoid/playerpacket.html
+++ b/echoesfromthevoid/playerpacket.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Echoes from the Void - Chapter 5</title>
+  <title>Echoes from the Void - Player Packet</title>
   <meta content="" name="131 Gaming Club 2022-2023 Crusade">
   <meta content="" name="Warhammer 40k,Springfield MA, Hadley MA, Northampton MA, Greenfield MA, Charlemont MA">
 
@@ -169,6 +169,12 @@
             </div>
 
             <div class="resume-item">
+              <h4>Base Size</h4>
+              <p>Players are expected to field models with bases that match the base size outlined by <a href="https://drive.google.com/file/d/1A31mVI4s1cSlXNQuxmZXQZt4dkxPIcVe/view" target="_blank">ITC</a>. ITC (primary or secondary) sized bases must be used but models don't have to be affixed to it, meaning blutack can be used to attach older models to right sized bases with no impact to hobby scoring. If a model is not in the ITC list, a secondary acceptable reference is the games-workshop webstore if a base size is listed, or wahapedia which also lists base sizes for units. If there is a conflict between these places ITC will be considered the authority.</p> 
+              <p>For information why base size is important <a href="https://objectivesecured.com.au/40k-base-sizes-comparison/" target="_blank"> this article </a> explains why</p> 
+            </div>
+
+            <div class="resume-item">
               <h4>Code of Conduct</h4>
               <p>Each player is expected to adhere to the <a href="https://www.131.games/index.html#codeofconduct">code of conduct</a></p>
             </div>
@@ -178,7 +184,7 @@
             <h3 class="resume-title"></h3>
 
             <div class="resume-item">
-              <h4>planetary control/Scoring Points</h4>
+              <h4>Planetary Control/Scoring Points</h4>
               <p>Each chapter offers a permanent reward to all members of the faction who scores the most Planetary Control (PC) points. These PC points can be gained through the following ways:</p>
 
     		  <ul>
