--- a/echoesfromthevoid/index.html
+++ b/echoesfromthevoid/index.html
@@ -99,7 +99,7 @@
               <li data-filter=".filter-chapter2">Chapter 2<br/>Nov<br/>750 Pts<br/>2 Games</li>
               <li data-filter=".filter-chapter3">Chapter 3<br/>Dec-Jan<br/>1000 Pts<br/>3 Games</li>
               <li data-filter=".filter-chapter4">Chapter 4<br/>Feb<br/>1250 Pts<br/>2 Games</li>
-              <li data-filter=".filter-chapter5">Chapter 5<br/>March<br/>1500 Pts<br/>2 Games</li>
+              <li data-filter=".filter-chapter5">Chapter 5<br/>March<br/>1000 Pts<br/>2 Games</li>
             </ul>
           </div>
         </div>
@@ -221,6 +221,25 @@
             </div>
           </div>
 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-chapter2" >
+            <div class="portfolio-wrap">
+              <img src="../assets/img/echoesfromthevoid/specops.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h3>Chapter 2 - Special Operations</h3>
+                <h4>Selleon Asteroid Belt</h4>
+                <strong>Dates: </strong>Nov 1 to Nov 30<br/>                
+                <p><strong>Points: </strong>Kill Team<br/>
+                <strong>Number of Games: </strong>1<br/>                     
+                <div class="portfolio-links">
+                  <!--
+                  <a href="../assets/img/echoesfromthevoid/chapter5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chapter 5"><i class="bx bx-plus"></i></a>
+                  -->
+                  <a href="./chapter2.specops.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Chapter 2 - SpecOps"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </div>
