--- a/echoesfromthevoid/playerpacket.html
+++ b/echoesfromthevoid/playerpacket.html
@@ -165,7 +165,13 @@
 
             <div class="resume-item">
               <h4>Universal Rules/Points/Balance Sheets</h4>
-              <p>All universal rules, points updates and FAQs from Matched Play apply to this crusade unless explicitly declared here.</p>
+              <p>All universal rules, points updates and FAQs from Matched Play apply to this crusade unless explicitly declared here. As of February 1 2023 this means players are expected to play with Arks of Omens points and rules with the exception of Battle Forged Army rules</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Battle Forged Armies</h4>
+              <p>Players armies must be battle-forged to the standard defined by Warzone Nephilim. OR Arks of Omen but players must choose one standard.</p>
+              <p>Refer to <a href="https://tinyurl.com/45j4fznr" target="_blank">Warzone Nephilim</a> or <a href=" tinyurl.com/3brp2br8" target="_blank">Arks of Omen</a></p>  
             </div>
 
             <div class="resume-item">
@@ -240,12 +246,11 @@
               <p>Refer to <a href="https://tinyurl.com/4den9csh" target="_blank">narrative play rules for additional details</a></p>  
             </div>
 
-            <div class="resume-item">
-              <h4>Battle Forged Armies</h4>
-              <p>Players armies must be battle-forged to the standard defined by Warzone Nephilim.</p>
-              <p>Refer to <a href="https://tinyurl.com/45j4fznr" target="_blank">Warzone Nephilim for additional details</a></p>  
-            </div>
 
+            <div class="resume-item">
+              <h4>Late Chapters New Players</h4>
+              <p>Players entering at the start of Chapter 4 or any player with fewer than 2 games in the crusade may choose to earn 3d6 experience for each unit in their roster as a one time bonus. </p>  
+            </div>
 
             <div class="resume-item">
               <h4>Ending a Chapter</h4>
